fix(footer, scroll): change footer position, change scrollbar

--- a/src/app/styles/wendorStyle.scss
+++ b/src/app/styles/wendorStyle.scss
@@ -1,8 +1,8 @@
 
 *::-webkit-scrollbar {
     border-radius: 8px;
-    width: 8px;
-    height: 8px;
+    width: 0px;
+    height: 0px;
 }
 
 *::-webkit-scrollbar-track {
