--- a/src/widgets/menu/ui/menu-area/MenuArea.module.scss
+++ b/src/widgets/menu/ui/menu-area/MenuArea.module.scss
@@ -5,12 +5,12 @@
     gap: 11px;
     width: 100%;
     
-    span{
-        width: 1px;
-        height: 24px;
-        background-color: #c4ff61;
-        transition: width 0.2s;
-    }
+    // span{
+    //     width: 1px;
+    //     height: 24px;
+    //     background-color: #c4ff61;
+    //     transition: width 0.2s;
+    // }
 }
 .activeLink{
     span{
